# ShenZhenSubwayProject

./: .gitignore  README.md  main.py  pyproject.toml
fastapi/: Untitled.ipynb  myapp.py  深圳地铁轨道数据全部(排除6.23的2点数据).xlsx  深圳地铁轨道数据全部.xlsx
fastapi/.ipynb_checkpoints/: myapp-checkpoint.py
fastapi/service/: S_H_ESD.py  Statistics.py  __init__.py
fastapi/service/.ipynb_checkpoints/: S_H_ESD-checkpoint.py
fastapi/static/: index.html
fastapi/static/assets/: index-OUTyDWXZ.js  index-e6e1pzVX.css
fastapi/画图/: 分析.ipynb  深圳地铁轨道数据6.23-6.29.xlsx  深圳地铁轨道数据6.30-7.9.xlsx  深圳地铁轨道数据7.11-7.19.xlsx  画图-0623-0629.ipynb  画图-0630-0709.ipynb  画图-0711-0719.ipynb
fastapi/画图/.ipynb_checkpoints/: 分析-checkpoint.ipynb  画图-0623-0629-checkpoint.ipynb  画图-0630-0709-checkpoint.ipynb  画图-0711-0719-checkpoint.ipynb
