[project]
name = "shenzhensubwayproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "openpyxl>=3.1.5",
    "pingouin>=0.5.5",
    "prophet>=1.1.7",
    "scipy>=1.16.1",
    "uvicorn>=0.35.0",
]
